Add owner controller endpoints
